# vellogd-r

./: .Rbuildignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  README.md  configure  configure.win
.github/workflows/: R-CMD-check.yaml  build-server.yaml
R/: 000-wrappers.R  download-server.R  main.R  vellogd-package.R  zzz.R
man/: draw_lottie.Rd  vellogd-package.Rd  vellogd.Rd
src/: Makevars.in  Makevars.win  Makevars.win.in  init.c  vellogd-win.def
src/dep/: Cargo.toml  README.md
src/dep/vellogd-cli/: Cargo.toml
src/dep/vellogd-cli/src/: main.rs
src/dep/vellogd-protocol/: Cargo.toml  build.rs
src/dep/vellogd-protocol/proto/: graphics_device.proto
src/dep/vellogd-protocol/src/: lib.rs
src/dep/vellogd-server/: Cargo.toml
src/dep/vellogd-server/src/: main.rs  server.rs  utils.rs
src/rust/: Cargo.toml  api.h
src/rust/src/: debug_device.rs  lib.rs  shared.rs  tracing.rs  winit_app.rs
src/rust/src/graphics/: color.rs  device_descriptor.rs  device_driver.rs  mod.rs
src/rust/src/graphics/ffi/: mod.rs
src/rust/src/vello_device/: default.rs  macos.rs  mod.rs  no_winit.rs  with_server.rs
src/rust/vellogd-server/: Cargo.toml
src/rust/vellogd-server/src/: main.rs
src/rust/vellogd-shared/: Cargo.toml
src/rust/vellogd-shared/src/: ffi.rs  lib.rs  protocol.rs  text_layouter.rs  winit_app.rs
src/rust/vellogd-shared/src/winit_app/: mod.rs  wgpu_util.rs
