[package]
name = "vellogd-shared"
version.workspace = true
edition.workspace = true

[features]
default = ["winit", "pollster"]
no_winit = []

[dependencies]
vello.workspace = true
kurbo.workspace = true
peniko.workspace = true
parley.workspace = true
winit = { workspace = true, optional = true }
pollster = { workspace = true, optional = true }
ipc-channel.workspace = true
serde = { version = "1.0", features = ["derive"] }
