[package]
name = "vellogd-shared"
version.workspace = true
edition.workspace = true

[features]
default = []
use_winit = ["winit", "pollster"]

[dependencies]
vello.workspace = true
velato.workspace = true
kurbo.workspace = true
peniko.workspace = true
parley.workspace = true
winit = { workspace = true, optional = true }
pollster = { workspace = true, optional = true }
ipc-channel.workspace = true

serde = { version = "1.0", features = ["derive"] }
futures-intrusive = "0.5"
png = "0.17.14"
